# agent-native-prototype

./: .gitignore  CLAUDE.md  HANDOFF.md  QUICK_REFERENCE.md  README.md  agent.md  async-agent-deployment-gtm-analysis.md  async-agent-deployment.md  claude-code-non-developer-landscape.md  linkedin-post-search.md  requirements.txt  test_db_integration.py  who_we_are  why-i-build-this.md  yc_f25_companies.json
.attachments/: manifest.json
.obsidian/: workspace.json
async-agent-use-cases/: README.md  async-email-triage.md  auto-response-client-comms.md  call-transcript-to-crm.md  content-quality-loop.md  crm-pipeline-reviewer.md  dynamic-sales-call-updates.md  email-triggered-research.md  evolving-battle-cards.md  lead-enrichment-routing.md  linkedin-signal-scanner.md  living-objection-library.md  pattern-detection.md  proposal-generator.md  scheduled-competitor-intelligence.md  user-feedback-synthesis.md
case-study/: yc-founder-domain-extraction.md
dashboard/: index.html
data/: client-response-rules.yaml  competitor-watchlist.yaml  email-triage-rules.yaml  monitor_linkedin_persons.csv
docs/: COMPLETE-WORKFLOW-PROGRESSION.md  DOES-SYSTEM-HANDLE-IT.md  PARALLEL-PROCESSING.md  README.md  SIMPLE-ANSWER-WHERE-FILTER.md  architecture-schematic.md  async-agent-deployment-complaint-sources.md  (+14 more)
services/webhook-service/: .env.example  HANDOFF.md  PLANNING.md  pyproject.toml  requirements.txt
services/webhook-service/app/: config.py
services/webhook-service/app/core/exceptions/: __init__.py  base.py
services/webhook-service/app/core/mixins/: timestamp.py
(+464 files in other folders)
