[project]
name = "webhook-service"
version = "0.1.0"
description = "Backend service for deploying GitHub repos as webhook-triggered Claude agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # Validation & Settings
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # Authentication
    "pyjwt>=2.8.0",
    "cryptography>=42.0.0",

    # HTTP client
    "httpx>=0.27.0",

    # Redis (for job queue)
    "redis>=5.0.0",

    # Claude SDK (for agent execution)
    "anthropic>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "pylint>=3.0.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
